# scallop

./: CHANGES  CMakeLists.txt  INSTALL  INSTALL.md  LP_run.m  README  README.md  README_scylla  draw.cc  draw.h  io.cc  io.h  lp.cc  lp.h  makefile  rational.cc  rational.h  scallop.cc  scallop.h  scallopFC.py  scylla.cc  scylla_classes.cc  scylla_classes.h  scylla_lp.cc  scylla_lp.h  scyllop.cc  scyllop_classes.cc  scyllop_classes.h  scyllop_lp.cc  scyllop_lp.h  word.cc  word.h
exlp-package/: CMakeLists.txt  EXLPvector.c  EXLPvector.h  README  config.h  hash.c  hash.h  lpstruct.c  lpstruct.h  lu.h  makefile  mps.h  mylib.c  mylib.h  preprocess.c  solve_lp.c
gallop/: CMakeLists.txt  Makefile  gallop.cc  gallop.h  graph.cc  graph.h
hallop/: CMakeLists.txt  Makefile  free_group_chain.cc  free_group_chain.h  hallop.cc  hallop.h  hallop_lp.cc  hallop_lp.h  hyp.cc  hyp.h  pieces.cc  pieces.h
new/: LP.cc  LP.h  Makefile  rational.cc  rational.h  scallop.cc  word.cc  word.h
new/exlp-package/: eta_file.c  eta_file.h  lu.c  main.c  matrix.c  matrix.h  mps.c  preprocess.h  solve_ip.c  solve_ip.h  solve_lp.h
new/gallop/: Makefile  gallop.cc  graph.cc  graph.h
new/scylla/: Makefile  scylla.cc  scylla.h  scylla_classes.cc  scylla_classes.h
new/trollop/: Makefile  trollop.cc  trollop.h  trollop_classes.cc  trollop_classes.h
scabble/: CMakeLists.txt  Makefile  scabble.cc  scabble.h
scylla/: CMakeLists.txt  Makefile  scylla.cc  scylla.h  scylla_classes.cc  scylla_classes.h
trollop/: CMakeLists.txt  Makefile  trollop.cc  trollop.h  trollop_classes.cc
